fixing navbar & footer alignment with margins

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -57,5 +57,5 @@ color: #386641;
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  margin: 0px 124px;
+  margin: 0px 66px;
 }
